@@ -1,5 +1,6 @@
 Version 2.02.02 - 
 ====================================
+  Add details to format1 'Invalid LV in extent map' error message.
   Fix lvscan snapshot full display.
   Bring lvdisplay man page example into line.
   Add mirror dmeventd library.
